--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "home-control-monitor",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "create-db": "./bin/create-db.js",
     "create-user": "./bin/create-user.js",
-    "initialize": "npm run create-db && npm run create-user"
+    "initialize": "./bin/welcome.js && npm run create-db && npm run create-user"
   },
   "author": "",
   "license": "ISC",
